// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header rendering 1`] = `
<header
  className="header"
  data-banner="testing"
>
  <h1>
    <mockConstructor
      to="/"
    >
      Regexper
    </mockConstructor>
  </h1>
  <ul
    className="list"
  >
    <li>
      <a
        href="https://gitlab.com/javallone/regexper-static"
        rel="external noopener noreferrer"
        target="_blank"
      >
        <Gitlab
          color="currentColor"
          size="24"
        />
        <WithMergedOptions(TransComponent)>
          Source on GitLab
        </WithMergedOptions(TransComponent)>
      </a>
    </li>
    <li>
      <mockConstructor
        to="/privacy"
      >
        <WithMergedOptions(TransComponent)>
          Privacy Policy
        </WithMergedOptions(TransComponent)>
      </mockConstructor>
    </li>
    <li
      data-requires-js={true}
    >
      <LoadNamespace(LocaleSwitcher) />
    </li>
  </ul>
</header>
`;

exports[`Header rendering with no banner 1`] = `
<header
  className="header"
  data-banner={null}
>
  <h1>
    <mockConstructor
      to="/"
    >
      Regexper
    </mockConstructor>
  </h1>
  <ul
    className="list"
  >
    <li>
      <a
        href="https://gitlab.com/javallone/regexper-static"
        rel="external noopener noreferrer"
        target="_blank"
      >
        <Gitlab
          color="currentColor"
          size="24"
        />
        <WithMergedOptions(TransComponent)>
          Source on GitLab
        </WithMergedOptions(TransComponent)>
      </a>
    </li>
    <li>
      <mockConstructor
        to="/privacy"
      >
        <WithMergedOptions(TransComponent)>
          Privacy Policy
        </WithMergedOptions(TransComponent)>
      </mockConstructor>
    </li>
    <li
      data-requires-js={true}
    >
      <LoadNamespace(LocaleSwitcher) />
    </li>
  </ul>
</header>
`;
